syntax = "proto3";

package commissionProvider;

message CommissionReportRequest {
  string userId = 1;
  string query = 2;  // JSON stringified query parameters
}

message CommissionBetRequest {
  string userId = 1;
  string matchId = 2;  // JSON stringified query parameters 
}

message CommissionReportResponse {
  string data = 1;
}

message CommissionBetResponse {
  string data = 1;
}


service CommissionProvider {
  rpc GetCommissionReport(CommissionReportRequest) returns (CommissionReportResponse);
  rpc GetCommissionBetReport(CommissionBetRequest) returns (CommissionBetResponse);
}
